--- a/lesson-3/index.html
+++ b/lesson-3/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+    <style>
+        .product-card img{
+            height: 200px;
+        }
+    </style>
 </head>
 <body>
 <script src="lesson-3.js"></script>
